--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@postillon/react-native-instagram-zoomable",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A component to implement the Instagram Zoom-Draggable-Effect for any component in React-Native",
   "main": "index.js",
   "private": false,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/postillonmedia/react-native-instagram-zoomable.git"
@@ -20,10 +17,10 @@
     "draggable",
     "wrapper"
   ],
-  "author": "Daniel Lang",
+  "author": "CodeFish Studio",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/postillonmedia/react-native-instagram-zoomable/issues"
+    "url": "https://github.com/CodeFishStudio/react-native-instagram-zoomable/issues"
   },
-  "homepage": "https://github.com/postillonmedia/react-native-instagram-zoomable#readme"
+  "homepage": "https://github.com/CodeFishStudio/react-native-instagram-zoomable#readme"
 }
